--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Pillow == 9.1.0
 py_cord == 2.0.0b7
 
 # C:\src\chat_daemon\chat_daemon.py: 13,14
+# pip install git+https://github.com/KaitoCross/pytchat.git
 pytchat == 0.5.5
 
 # C:\src\chat_daemon\chat_daemon.py: 16
