update example.ini to match new format

--- a/example.ini
+++ b/example.ini
@@ -1,5 +1,12 @@
 [GENERAL]
-dummyMessageFile = dummy_messages.json
+twitchChannelName = XXXXXXXXXXXX
+
+[DEV]
+testMode = True
+testChannelId = XXXXXXXXXXXXXXXXXXX
+
+[AUTH_MANAGER]
+authTokenDir = c:\src\tokens
 
 [SERVER]
 httpServerPort = 9000
@@ -9,9 +16,9 @@ socketServerPort = 9001
 discordChannelId = XXXXXXXXXXXXXXXXXX
 
 [AUTHENTICATION]
-twitchToken = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-twitchClientSecret = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-twitchClientID = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-twitchChannelName = XXXXXXXXXXXX
-discordToken = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-youtubeApiKey = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+twitchToken = XXXXXXXXXXXXXXXXXXXXX
+twitchClientSecret = XXXXXXXXXXXXXXXXXXXXX
+twitchClientID = XXXXXXXXXXXXXXXXXXXXX
+twitchChannelName = XXXXXXXXXX
+discordToken = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+youtubeApiKey = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
