--- a/config.example.ini
+++ b/config.example.ini
@@ -22,3 +22,4 @@ twitchClientID = XXXXXXXXXXXXXXXXXXXXX
 twitchChannelName = XXXXXXXXXX
 discordToken = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 youtubeApiKey = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+youtubeClientSecret = XXXXXXXXXXX.json
