auth manager changes

--- a/config.example.ini
+++ b/config.example.ini
@@ -6,7 +6,16 @@ testMode = True
 testChannelId = XXXXXXXXXXXXXXXXXXX
 
 [AUTH_MANAGER]
-authTokenDir = c:\src\tokens
+authTokenDir = c:\<path to tokens>
+clientSecretDir = c:\<path to path to client secrets>
+
+[LIVECHATBOT-READONLY]
+clientSecret = <client secret file>.json
+scopes = https://www.googleapis.com/auth/youtube.readonly
+
+[LIVECHATBOT-RECV]
+client_secret = <client secret file>.json
+scopes = https://www.googleapis.com/auth/youtube.force-ssl
 
 [SERVER]
 httpServerPort = 9000
@@ -22,4 +31,3 @@ twitchClientID = XXXXXXXXXXXXXXXXXXXXX
 twitchChannelName = XXXXXXXXXX
 discordToken = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 youtubeApiKey = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-youtubeClientSecret = XXXXXXXXXXX.json
