now with chatbot

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,5 +1,6 @@
 [GENERAL]
 twitchChannelName = XXXXXXXXXXXX
+commandRefreshInterval = 240
 
 [DEV]
 testMode = True
@@ -17,6 +18,10 @@ scopes = https://www.googleapis.com/auth/youtube.readonly
 client_secret = <client secret file>.json
 scopes = https://www.googleapis.com/auth/youtube.force-ssl
 
+[LIVECHATBOT-SEND]
+clientSecret = <client secret file>.json
+scopes = https://www.googleapis.com/auth/youtube.force-ssl
+
 [SERVER]
 httpServerPort = 9000
 socketServerPort = 9001
@@ -31,3 +36,8 @@ twitchClientID = XXXXXXXXXXXXXXXXXXXXX
 twitchChannelName = XXXXXXXXXX
 discordToken = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 youtubeApiKey = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+[SHEET]
+serviceToken = <robots token file>.json
+id = <sheet id>
+commandsSheetName = Commands
