rescan to minutes forwaring of !commands threadpool cleanup removal of unneeded async code

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,6 +1,6 @@
 [GENERAL]
 twitchChannelName = XXXXXXXXXXXX
-commandRefreshInterval = 240
+commandRefreshIntervalMin = 240
 
 [DEV]
 testMode = True
