added several fields to chat commands sheet fixed behavior of showing commands added mod & service awareness

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,6 +1,10 @@
 [GENERAL]
 twitchChannelName = XXXXXXXXXXXX
 commandRefreshIntervalMin = 240
+services = YouTube,Twitch,Discord
+
+[DISCORD]
+modRoles = <roles in discord that should be allowed mod commands - comma seperated>
 
 [DEV]
 testMode = True
